--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,6 +24,11 @@
 }
 
 @font-face {
+  font-family: Gilroy-SemiBold;
+  src: url("../fonts/Gilroy-SemiBold.ttf");
+}
+
+@font-face {
   font-family: Poppins-Bold-49px;
   src: url('../fonts/Poppins-Bold.ttf');
   font-size: 49px;
