--- a/css/mobile-320px.css
+++ b/css/mobile-320px.css
@@ -19,13 +19,15 @@ html,body{
   padding: 20px;
   margin: 0;
   width: 100%;
-  font-size: 26px;  
+  height: max-content;
+  font-size: 23px;  
   text-align: left;
 }
 
 .p-below-main-text{
   margin: 0;
   padding: 20px;
+  height: max-content;
   width: 100%;
   font-size: 17px;
 }
@@ -33,15 +35,15 @@ html,body{
 .btn-developers-profile{
   margin: 20px;
   margin-right: 0!important;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   width: 90%;
 }
 
 .header-content-reviews{
   justify-content: flex-start;
-  margin: 20px;
-  margin-top: 40px;
-  grid-row-gap: 20px;
+  margin-left: 20px;
+  margin-top: 0!important;
+  grid-row-gap: 10px!important;
   flex-direction: column;
 }
   
@@ -215,6 +217,9 @@ html,body{
   }
   
   .app-info-grid{
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
     width: 100%;
     grid-template-columns: 1fr;
     margin: 0;
@@ -424,10 +429,13 @@ html,body{
   }
   
   .div-grid-development-services{
+    align-items: center;
+    justify-content: center;
     grid-template-columns: 1fr;
     margin-left: 0;
     margin-right: 0!important;
     margin-top: 10px;
+    padding: 20px;
   }
 
   .div-grid-development-services .p-transparency{
@@ -500,6 +508,8 @@ html,body{
   }
   
   .div-numbers-grid{
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     margin-left: 0;
     padding-right: 0;
