--- a/css/tablets.css
+++ b/css/tablets.css
@@ -451,6 +451,7 @@ html,body{
 
 .sec-why-hire-cronj h1,p{
   text-align: center!important;
+  align-self: center!important;
 }
 
 .h1-why-hire-cronj{
