--- a/css/tablets.css
+++ b/css/tablets.css
@@ -13,9 +13,32 @@ html,body{
 
 .main-text{
   padding: 20px;
-  margin: 0;
+  margin-left: 0;
   height: max-content;
   text-align: left;
+}
+
+.navbar{
+  left: 0;
+  width: 100%;
+}
+
+.navbar ul{
+  margin-left: 10px;
+}
+
+.navbar a{
+  font-size: 14px;
+}
+
+.img-logo-company{
+  display: none;
+}
+
+.btn-primary{
+  margin-left: 0;
+  width: 135px;
+  height: 37px;
 }
 
 .p-below-main-text{
@@ -30,30 +53,14 @@ html,body{
   margin-right: 0!important;
 }
 
-.header-content-reviews{
+/* .header-content-reviews{
   justify-content: flex-start;
   margin-left: 20px;
   margin-top: 0!important;
   grid-row-gap: 10px!important;
   flex-direction: column;
-}
+} */
   
-.navbar{
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 20px;
-  display: none;/* remove later */
-}
-
-.navbar ul{
-  margin-top: 20px;
-  flex-direction: column;
-}
-
-.btn-primary{
-  margin-left: 0;
-}
-
 
 /* Main */
 /* sec-group-12585 */
